# docs/swagger.yaml
@@ -1,5 +1,14 @@
 basePath: /
 definitions:
+  balance.History:
+    properties:
+      amount:
+        type: integer
+      date:
+        type: string
+      reason:
+        type: string
+    type: object
   balance.Order:
     properties:
       amount:
@@ -17,8 +26,6 @@ definitions:
         type: string
       service_id:
         type: integer
-    required:
-    - name
     type: object
   balance.User:
     properties:
@@ -123,6 +130,36 @@ paths:
       summary: add money
       tags:
       - billing
+  /bill/info/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/balance.History'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: get history
+      tags:
+      - info
   /bill/info/report/{year}/{month}:
     get:
       consumes:
